--- a/TaskService/Web.config
+++ b/TaskService/Web.config
@@ -12,10 +12,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ida:AadInstance" value="https://fabrikamb2c.b2clogin.com/{0}/{1}/v2.0/.well-known/openid-configuration" />
-    <add key="ida:Tenant" value="fabrikamb2c.onmicrosoft.com" />
-    <add key="ida:ClientId" value="90c0fe63-bcf2-44d5-8fb7-b8bbc0b29dc6" />
-    <add key="ida:SignUpSignInPolicyId" value="b2c_1_susi" />
+    <add key="ida:AadInstance" value="https://wmsorganization.b2clogin.com" />
+    <add key="ida:Tenant" value="wmsorganization.onmicrosoft.com" />
+    <add key="ida:ClientId" value="c0be5372-5bb6-4a66-8061-ab05abe788e9" />
+    <add key="ida:SignUpSignInPolicyId" value="B2C_1_EmailSignup_Signin_Webapplcn" />
     <!-- The following settings is used for requesting access tokens -->
     <add key="api:ReadScope" value="read" />
     <add key="api:WriteScope" value="write" />
