--- a/TaskWebApp/Web.config
+++ b/TaskWebApp/Web.config
@@ -16,8 +16,8 @@
         If you are following the workarounds listed in the doc and tenantId claim (tid) is available in the user's token, then please change the 
         code in <ClaimsPrincipalsExtension.cs GetB2CMsalAccountId()> to let MSAL pick this from the claims instead -->
     <add key="ida:TenantId" value="f43c1f3e-f98b-4d36-b806-c9a3011274ed" />
-    <add key="ida:ClientId" value="c0be5372-5bb6-4a66-8061-ab05abe788e9" />
-    <add key="ida:ClientSecret" value="Jns7Q~zDUq_a2ljbaHt99TBt1mdfsZLmtwD56" />
+    <add key="ida:ClientId" value="7bad3f69-0f75-450f-83fa-d8f7e947989f" />
+    <add key="ida:ClientSecret" value="R1_7Q~4pBq~2e3o1M4slLNxrkU5zkccZi.pgu" />
     <add key="ida:AadInstance" value="https://wmsorganization.b2clogin.com/" />
     <add key="ida:RedirectUri" value="https://localhost:44316/" />
     <add key="ida:SignUpSignInPolicyId" value="B2C_1_EmailSignup_Signin_Webapplcn" />
